[package]
name = "resample-pdf"
version = "0.1.0"
edition = "2021"
description = "Resample images in PDFs to a target DPI with quality control"

[dependencies]
lopdf = "0.34"
flate2 = "1.0"
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
jpeg-encoder = "0.7.0"

