[package]
name = "resample-pdf"
version = "0.1.0"
edition = "2021"
description = "Resample images in PDFs to a target DPI with quality control"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "resample-pdf"
path = "src/main.rs"

[dependencies]
lopdf = "0.34"
flate2 = "1.0"
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
anyhow = "1.0"
thiserror = "1.0"
jpeg-encoder = "0.7.0"

# CLI-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4", features = ["derive"] }

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true
